# python-stuffs

./: .gitignore  CLAUDE.md  README.md  chart.py  find-my-can.py  new-poc.sh  python-stuffs.code-workspace
.devcontainer/: devcontainer.json
.github/workflows/: test.yml
projects/3d-mesh-beliche/: README.md  main.py  pyproject.toml
projects/3d-mesh-beliche/tests/: test_main.py
projects/asciichart-demo/: README.md  main.py  pyproject.toml
projects/asciichart-demo/tests/: test_main.py
projects/cat-captions-visual/: .clinerules  .cursorrules  README.md  main.py  pyproject.toml
projects/cat-captions-visual/tests/: test_main.py
projects/multiprocessing-examples/: README.md  main.py  pyproject.toml
projects/multiprocessing-examples/tests/: test_main.py
projects/network-scanner/: README.md  main.py  pyproject.toml
projects/network-scanner/tests/: test_main.py
src/: chart.py  find-my-can.py  multiprocess_examples_1.py
template/: README.md  main.py  pyproject.toml
